# duckstore

./: .gitignore  MANIFEST.in  pyproject.toml  readme.md  requirements.txt  setup.cfg
docs/: conf.py  index.rst
docs/structure/: structure.rst
src/duckstore/: app.py  config.py  exceptions.py  forms.py  views.py
src/duckstore/database/: __init__.py  database.py  models.py
src/duckstore/database/alembic/: env.py
src/duckstore/scripts/: launcher.py
src/duckstore/static/duckstore/: edit_document.js  index.js
src/duckstore/templates/: base.html  edit_document.html  index.html
src/duckstore/util/: __init__.py  filedialog.py  filename_deduper.py  optimize_pdf.py  sevenzip.py
tests/: conftest.py  test_launcher.py
