[metadata]
name = duckstore
version = 0.0.1
author = David C Ellis
description = Document Store for Personal Documents
classifiers =
    Development Status :: 1 - Planning
    Programming Language :: Python :: 3.9
License = AGPLv3

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    click
    flask
    flask-wtf
    flask-pretty
    bootstrap-flask
    sqlalchemy
    alembic
    py7zr
    wtforms
tests_require =
    pytest
    pytest-cov
include_package_data = True

[options.extras_require]
dev =
    black
    sphinx

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    duckstore = duckstore.scripts.launcher:launch
